work on the cart functionalities

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <ul class="header-icons d-flex">
               <li>
                 <a href="wishlist.html">
+                  <span class="wishlist-count">2</span>
                   <svg
                     width="37"
                     height="37"
@@ -88,6 +89,7 @@
                   data-bs-target="#offcanvasCart"
                   aria-controls="offcanvasCart"
                 >
+                  <span class="cart-count">2</span>
                   <svg
                     width="40"
                     height="32"
