--- a/terms.html
+++ b/terms.html
@@ -26,7 +26,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="images/logo.svg" alt="CassiaSkin Logo" />
           </a>
           <button
@@ -43,9 +43,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="shop.html">Shop</a>
@@ -685,7 +683,7 @@
         <div class="cart-total bg-1">
           <h4>
             <span>Subtotal:</span>
-            <span>$58.00</span>
+            <span class="subtotal-price">$58.00</span>
           </h4>
           <div class="d-flex flex-wrap mt-4 gap-3 justify-content-center">
             <a href="cart.html" class="button primary-btn px-5 py-4 rounded-5"
