--- a/cart.html
+++ b/cart.html
@@ -277,10 +277,10 @@
                   </div>
                 </li>
               </ul>
-              <div class="subtotal-details">
-                <h4>
+              <div class="subtotal-details cart-total position-static">
+                <h4 class="border-0 p-0">
                   Subtotal:
-                  <span class="subtotal-price">$70.00</span>
+                  <span class="subtotal-price ms-3">$70.00</span>
                 </h4>
                 <div class="btn-wrap mt-0 d-flex flex-wrap gap-4">
                   <a href="checkout.html" class="button primary-btn"
