--- a/about.html
+++ b/about.html
@@ -888,7 +888,9 @@
             <span>Subtotal:</span>
             <span class="subtotal-price">$58.00</span>
           </h4>
-          <div class="d-flex flex-wrap mt-4 gap-3 justify-content-center">
+          <div
+            class="btn-wrap d-flex flex-wrap mt-4 gap-3 justify-content-center"
+          >
             <a href="cart.html" class="button primary-btn px-5 py-4 rounded-5"
               >View Cart</a
             >
