--- a/cart.html
+++ b/cart.html
@@ -283,7 +283,9 @@
                   <span class="subtotal-price ms-3">$70.00</span>
                 </h4>
                 <div class="btn-wrap mt-0 d-flex flex-wrap gap-4">
-                  <a href="checkout.html" class="button primary-btn"
+                  <a
+                    href="checkout.html"
+                    class="button primary-btn checkout-btn"
                     >Checkout</a
                   >
                   <a href="#" class="button secondary-btn">Empty Cart</a>
@@ -704,7 +706,9 @@
             <span>Subtotal:</span>
             <span class="subtotal-price">$58.00</span>
           </h4>
-          <div class="d-flex flex-wrap mt-4 gap-3 justify-content-center">
+          <div
+            class="btn-wrap d-flex flex-wrap mt-4 gap-3 justify-content-center"
+          >
             <a href="cart.html" class="button primary-btn px-5 py-4 rounded-5"
               >View Cart</a
             >
