--- a/shop.html
+++ b/shop.html
@@ -184,7 +184,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="product-item">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
@@ -276,7 +276,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="product-item">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
@@ -368,7 +368,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="product-item">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
@@ -460,7 +460,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="product-item">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
