--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           <ul class="nav nav-tabs justify-content-center" role="tablist">
             <li class="nav-item" role="presentation">
               <a
-                class="nav-link"
+                class="nav-link active"
                 id="products-tab-0"
                 data-bs-toggle="tab"
                 href="#products-tabpanel-0"
