Refactor code structure for improved readability and maintainability

--- a/cart.html
+++ b/cart.html
@@ -174,7 +174,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="cart-table">
+            <div class="my-table">
               <ul>
                 <li class="cart-item">
                   <div class="cart-left d-flex gap-5 align-items-center">
@@ -288,7 +288,9 @@
                     class="button primary-btn checkout-btn"
                     >Checkout</a
                   >
-                  <a href="#" class="button secondary-btn">Empty Cart</a>
+                  <a href="#" class="button secondary-btn empty-cart-btn"
+                    >Empty Cart</a
+                  >
                 </div>
               </div>
             </div>
