Adjust product item minimum height for better layout consistency

--- a/index.html
+++ b/index.html
@@ -3876,6 +3876,7 @@
       tabindex="-1"
       aria-labelledby="productDetailsModalLabel"
       aria-hidden="true"
+      data-bs-focus="false"
     >
       <div class="modal-dialog modal-xl">
         <div class="modal-content bg-1">
